# mpc-adaptor-demo

./: Cargo.toml  README.md
src/: eth_utils.rs  main.rs  math.rs
src/bridge/: cggmp.rs  common.rs  core.rs  synedrion.rs
src/simulation/: cggmp.rs  common.rs  synedrion.rs
