[package]
name = "my-mpc-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. cggmp24 (通常包含在 cggmp21 crate 中)
# cggmp21 = { version = "0.5", features = ["curve-secp256k1"] }
cggmp24 = { version = "0.7.0-alpha.3", features = ["curve-secp256k1"] }
sha3 = "0.10"

# 2. Synedrion (假设来自 Entropy 仓库)
# 注意：你需要根据实际情况调整 git tag 或 branch
synedrion = { git = "https://github.com/entropyxyz/synedrion.git", rev = "b238a7356657bfcfe8787361100f1959fc6c057c", features = ["k256", "dev"] }
manul = { git = "https://github.com/entropyxyz/manul.git", rev = "4bed1944dc225c51c880330baba74f1e514c9339", features = ["dev", "tokio"] }

# 3. 工具库
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
num-traits = "0.2"
num-bigint = "0.4" # Synedrion 通常用这个
elliptic-curve = "0.13" # Required for direct usage of CurveArithmetic trait
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
crypto-bigint = { version = "0.6", features = ["serde"] }
futures-util = "0.3"
rand_core = "0.6.4"
generic-ec = "0.4"
# Add ethers for Ethereum transaction construction and RLP encoding
ethers = { version = "2.0", features = ["legacy"] }
round-based = { version = "0.4.1", features = ["sim"] }

[patch.crates-io]
group = { git = "https://github.com/zkcrypto/group" }